--- a/src/main/webapp/employee-affectation.xhtml
+++ b/src/main/webapp/employee-affectation.xhtml
@@ -2,28 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
->
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
     <title>Affectation Employé-Projet</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
 </h:head>
-
 <h:body class="container mt-5">
     <h1 class="mb-4">Affectation Employé-Projet</h1>
 
     <h:form>
         <div class="mb-3">
             <label for="employee" class="form-label">Sélectionner un Employé :</label>
-            <h:selectOneMenu id="employee" value="#{employeeController.selectedEmployee}" class="form-control">
-                <f:selectItems value="#{employeeController.allEmployees}" var="e" itemValue="#{e.id}" itemLabel="#{e.name}"/>
+            <h:selectOneMenu id="employee" value="#{employeeController.selectedEmployee}"
+                             converter="employeeConverter" class="form-control">
+                <f:selectItem itemLabel="-- Sélectionner un Employé --" itemValue="#{null}" />
+                <f:selectItems value="#{employeeController.allEmployees}" var="e"
+                               itemValue="#{e}" itemLabel="#{e.name}"/>
             </h:selectOneMenu>
         </div>
 
         <div class="mb-3">
             <label for="project" class="form-label">Sélectionner un Projet :</label>
-            <h:selectOneMenu id="project" value="#{projectController.selectedProject}" class="form-control">
-                <f:selectItems value="#{projectController.allProjects}" var="p" itemValue="#{p.id}" itemLabel="#{p.name}"/>
+            <h:selectOneMenu id="project" value="#{projectController.selectedProject}"
+                             converter="projectConverter" class="form-control">
+                <f:selectItem itemLabel="-- Sélectionner un Projet --" itemValue="#{null}" />
+                <f:selectItems value="#{projectController.allProjects}" var="p"
+                               itemValue="#{p}" itemLabel="#{p.name}"/>
             </h:selectOneMenu>
         </div>
 
